tests/fixtures/invalid/bytes_bitnot.py
# Cannot use bitwise NOT on bytes
x: int = ~b"hello"
